fixed msie gradients bug and jumping sub menus

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ a.button, input[type='reset'], input[type='button'], input[type='submit'] {
   margin: 0 0.25em;
   text-shadow: none;
   white-space: nowrap;
+  border-bottom: solid 0.33em #fff;
 }
 
 .menu .current_page_item a, .menu .current-menu-item a  {
@@ -290,9 +291,7 @@ a.button, input[type='reset'], input[type='button'], input[type='submit'] {
 	background-image: none;
 	color: #000;
   border-bottom: solid 0.33em #000;
-  background-image: -ms-linear-gradient(top, #ff0, #00f);
   filter: none;
-
 }
 
 
